# BDelta

./: .gitignore  Changelog  Format  README  setup.py  version.py
makefiles/: CMakeLists.txt
makefiles/vs90/: bdelta_python.vcproj
src/: Makefile  Makefile.OSX  bdelta.cpp  bdelta.def  bdelta.h  bdelta.pyx  bdelta_python.cpp  bpatch.cpp  checksum.h  compatibility.h  container.h  file.cpp  file.h  libbdelta.cpp  noexcept.h  setup.py
test/: library.cpp  py_bindings.py  python.py  suite.py
